PIC + filter modification testing

--- a/sensorized-glove/Code/Firmware/Microchip/Sensorized_Glove.X/nbproject/Makefile-genesis.properties
+++ b/sensorized-glove/Code/Firmware/Microchip/Sensorized_Glove.X/nbproject/Makefile-genesis.properties
@@ -1,6 +1,9 @@
 #
-#Wed Aug 22 14:02:12 EDT 2018
-configurations-xml=2dd75b59f0638289b3af5dccda302cbf
+#Thu Aug 23 12:25:59 EDT 2018
+default.com-microchip-mplab-nbide-toolchainXC16-XC16LanguageToolchain.md5=9c02526497137184111170fe665dec85
+default.languagetoolchain.dir=C\:\\Program Files (x86)\\Microchip\\xc16\\v1.35\\bin
+configurations-xml=222f80efab4aca245445093940f7b1ec
 com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=52742b11d992fb0dd234edfb95066b34
+default.languagetoolchain.version=1.35
 host.platform=windows
-conf.ids=
+conf.ids=default
